# DPS-Project

./: .gitignore  README.md
Code/: CMakeLists.txt  DPS-Platoon.c  README.md.txt  brakeSystem.cpp  brakeSystem.h  commonLib.h  driverInterface.cpp  driverInterface.h  licensePlate.cpp  licensePlate.h  main.cpp
Code/comms_testing/SocketTest/: CMakeLists.txt  Client.cpp  CommsModule.cpp  CommsModule.h  CommsModuleServer.cpp  CommsModuleServer.h  CommsModuleServerTest.cpp  CommsModuleTest.cpp  Message.cpp  Message.h  MessageParser.cpp  MessageParser.h  MessageStruct.h  MovementDirection.h  Server.cpp  truckRole_e.h
Code/comms_testing/SocketTest/client/: CommsModule.h
Code/comms_testing/SocketTest/lib/: Message.cpp  Message.h  MessageParser.h  Movement.h  TruckRole.h
Code/comms_testing/SocketTest/server/: CommsModuleServer.h  SocketClientIDStruct.h
Code/communication/: CommsModule.cpp  CommsModule.h
Code/controller/: controller.cpp  controller.h
Code/decryptor/: decryptor.cpp  decryptor.h
Code/interface/: interface.cpp  interface.h
Code/lib/: LogicalClock.cpp  LogicalClock.h  Message.cpp  Movement.h  TruckMetadata.h  lib.h
Code/server/: CommsModuleServer.cpp
Code/src/: CMakeLists.txt  CommsModuleTest.cpp  main.c  main.cpp  state_machine.cpp  state_machine.h
Code/src/FinalTruck/lib/: Event.h  MessageParser.h  SurroundingTruck.h
Code/src/FinalTruck/server/: CommsModuleServer.cpp
Code/src/FinalTruck/truck/decryptor/: decryptor.cpp
Code/src/Follower/: main.cpp
Code/src/Follower/client/: CommsModule.cpp
Code/src/Follower/lib/: Message.cpp  Message.h  MessageParser.cpp  MessageParser.h  Movement.h  SocketClientIDStruct.h
Code/src/Follower/server/: CommsModuleServer.cpp
Code/src/Follower/truck/controller/: controller.cpp
Code/src/Leader/: CMakeLists.txt  main.cpp
Code/src/Leader/client/: CommsModule.cpp
Code/src/Leader/lib/: Location.h  Message.cpp  MessageParser.cpp  MessageParser.h  MessageStruct.h  lib.h
Code/src/Leader/server/: CommsModuleServerMain.cpp
Code/src/Leader/truck/controller/: controller.cpp  controller.h
Code/src/class/: Controller.cpp  Controller.h  antiCollisionSystem.cpp  antiCollisionSystem.h  commonLib.h  communication_socket_example.cpp  driverInterface.cpp  driverInterface.h  licensePlate.h  time.cpp  truck.cpp  truck.h  truckCommunication.cpp
Code/src/class/trash/: time.h
Code/src/client/: CommsModule.cpp  CommsModule.h
Code/src/communication/: CommsModule.h  communication.h
Code/src/component/communication/: communication.cpp  communication.h
Code/src/component/controller/: controller.cpp  controller.h
Code/src/component/subsystem/: antiCollisionSystem.h  driverInterface.h
Code/src/component/truck/: truck.cpp  truck.h
Code/src/controller/: controller.cpp  controller.h
Code/src/interface/: interface.cpp  interface.h
Code/src/lib/: LogicalClock.h  Message.cpp  Message.h  MessageParse.cpp  MessageParse.h  MessageParser.cpp  MessageParser.h  Movement.cpp  TruckMetadata.h  TruckRole.h  commonLib.h  global_variable.h  licensePlate.h
Code/src/server/: CommsModuleServer.h  CommsModuleServerMain.cpp
Code/src/subsystem/: antiCollisionSystem.cpp  antiCollisionSystem.h  driverInterface.h  licensePlate.cpp  licensePlate.h  logicalClock.cpp  logicalClock.h
Code/src/truck/: Truck.cpp  Truck.h  licensePlate.h  truck.cpp  truck.h
Code/src/truck/collision_avoidance/: distance_validation.cu
Code/src/truck/controller/: controller.cpp  controller.h
Code/src/truck/decryptor/: decryptor.cpp  decryptor.h
Code/truck/: Truck.cpp  Truck.h
Documentation/: main.tex
Documentation/Images/: README.md
Documentation/Section/: README.md
Documentation/section/: 01abstract.tex  02introduction.tex  03SystemAnalysis.tex  04DesignAndImplementation_system.tex  05DesignAndImplementation_truck.tex  06DesignAndImplementation_communication.tex  07VerificationAndValidation.tex  08OutlookAndSummary.tex  09GitHub.tex  10Contributors.tex  11Affidavit.tex  Motivation.tex
Model/: Architechture.drawio.xml  Truck Platooning.eapx  Truck Platooning.ldb
